[package]
name = "solana_token_tracker"
version = "0.1.0"
description = "Hivemapper Substreams"
edition = "2021"

[features]

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4.0"
prost = "0.11"
prost-types = "0.11"
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-program-instructions = "0.1"
thiserror = "1.0.25"
anyhow = "1.0.72"
serde_qs = "0.12.0"
serde = { version = "1.0", features = ["derive"] }


[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
